removed old artifacts from the template files

--- a/docker/ansible/ansible-playbook/templates/template.pkr.hcl.j2
+++ b/docker/ansible/ansible-playbook/templates/template.pkr.hcl.j2
@@ -1,6 +1,6 @@
 variable "base_image_uri" {
   type    = string
-  default = "aetd-dockerlab.gsfc.nasa.gov/docker/etd-docker-containers/etd-ubuntu20"
+  default = ""
 }
 
 variable "docker_repo" {
